古いのから

--- a/.gitignore
+++ b/.gitignore
@@ -298,3 +298,7 @@ Temp/UnityTempFile-01626499813edd8498443ec400c8fbe5
 YokogeTeamProject2018.csproj
 *.csproj
 *.cache
+obj/Debug/Assembly-CSharp.dll
+obj/Debug/Assembly-CSharp.dll
+obj/Debug/Assembly-CSharp.dll
+obj/Debug/Assembly-CSharp.pdb
