--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,5 @@ obj/Debug/Assembly-CSharp.dll
 obj/Debug/Assembly-CSharp.dll
 obj/Debug/Assembly-CSharp.dll
 obj/Debug/Assembly-CSharp.pdb
+.vscode/settings.json
+YokogeTeam2018_Nov.sln
